--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
     <nav>
         <h2>Campo Minato</h2>
-        
+
         <div class="side-item">
 
             <label for="difficulty">Choose difficulty:</label>
-            <select name="" id="difficulty">
+            <select name="difficulty" id="difficulty">
+                <option value="ready">Are you ready to play?</option>
                 <option value="easy">Easy</option>
                 <option value="medium">Medium</option>
                 <option value="hard">Hard</option>
@@ -31,7 +32,7 @@
     <!-- continaer middle  -->
 
     <div class="container">
-        
+        <div class="container-box"></div>
     </div>
 
     <script src="script.js"></script>
