try middle container

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <label for="difficulty">Choose difficulty:</label>
             <select name="difficulty" id="difficulty">
                 <option value="ready">Are you ready to play?</option>
-                <option value="easy">Easy</option>
-                <option value="medium">Medium</option>
+                <option id="easy" value="easy">Easy</option>
+                <option id="medium" value="medium">Medium</option>
                 <option value="hard">Hard</option>
             </select>
     
