--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
         <div class="side-item">
 
-            <label for="difficulty">Choose difficulty:</label>
+            <label for="difficulty">Difficulty:</label>
             <select name="difficulty" id="difficulty">
-                <option value="ready">Are you ready to play?</option>
                 <option id="easy" value="easy">Easy</option>
                 <option id="medium" value="medium">Medium</option>
                 <option value="hard">Hard</option>
             </select>
     
             <button id="btn-play">Play</button>
-            <button id="btn-reset">Reset</button>
 
         </div>
     </nav>
