--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
             <label for="difficulty">Difficulty:</label>
             <select name="difficulty" id="difficulty">
-                <option id="easy" value="easy">Easy</option>
-                <option id="medium" value="medium">Medium</option>
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
                 <option value="hard">Hard</option>
             </select>
     
