--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
             <label for="difficulty">Difficulty:</label>
             <select name="difficulty" id="difficulty">
+                <option value="">Choose</option>
                 <option value="easy">Easy</option>
                 <option value="medium">Medium</option>
                 <option value="hard">Hard</option>
@@ -32,6 +33,12 @@
     <div class="container">
         <div class="container-box"></div>
     </div>
+
+    <!-- footer -->
+
+    <footer>
+        <span class="foot">Made with &hearts; by <a href="#!">Boolean</a></span>
+    </footer>
 
     <script src="script.js"></script>
 </body>
